# juntagrico-custom-sub

./: .codeclimate.yml  .coveragerc  .gitignore  MANIFEST.in  Procfile  README.md  pyproject.toml  requirements-local.txt  requirements.txt  setup.py  testsettings.py  testurls.py  testurls_downgraded.py  wsgi.py
.github/workflows/: juntagrico-ci.yml  python-publish.yml
juntagico_custom_sub/: juntagricoapp.py  models.py
juntagrico_custom_sub/: __init__.py  admin.py  apps.py  basimilch.py  config.py  juntagricoapp.py  models.py  urls.py  views.py
juntagrico_custom_sub/downgrade/: urls_1_5.py  views_1_5.py
juntagrico_custom_sub/entity/: cs_depot.py  custom_delivery.py  product.py  subscription_content.py  subscription_content_future_item.py  subscription_content_item.py  subscription_size_mandatory_products.py
juntagrico_custom_sub/management/commands/: cs_generate_basic_data.py  cs_generate_depot_list.py  cs_generate_pack_list.py  cs_generate_testdata.py  (+6 more)
juntagrico_custom_sub/migrations/: 0001_initial.py  0002_auto_20190317_1604.py  0002_subscription_item.py  0003_auto_20190815_2036.py  0004_auto_20191005_1144.py  0005_customdelivery_delivery_comment.py  0006_auto_20191113_2304.py  0007_csdepot.py  0008_auto_20191209_2003.py  0009_product_code.py  0010_generate_code.py  0011_enforce_constraints.py  0012_alter_subscriptioncontent_subscription.py
juntagrico_custom_sub/templates/: subscription_content.html
juntagrico_custom_sub/templatetags/: cs_config.py
juntagrico_custom_sub/util/: sub_content.py
test/: __init__.py  test_manage_cmds.py  test_subs.py
(+28 files in other folders)
